# lammps-gui

./: .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  CMakeLists.txt  README.md  SECURITY.md  TODO.md  codemeta.json  update-codemeta.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  generic.md  help_request.md
.github/codeql/: cpp.yml
.github/workflows/: build-html-docs.yml  build-linux-flatpak.yml  codeql-analysis.yml  compile-linux-qt5.yml  compile-linux-qt6.yml  compile-linux-qtgraphs.yml  compile-macos-dmg.yml  compile-mingw64-cross.yml  compile-windows-msvc.yml  copilot-setup-steps.yml  coverity-scan.yml  draft-pdf.yml  metadata-check.yml  sphinxdoc.yml
_codeql_build_dir/: CMakeCache.txt  cmake_install.cmake  lammps-gui
_codeql_build_dir/.qt/: QtDeploySupport.cmake
_codeql_build_dir/doc/: conf.py
_codeql_build_dir/doc/_templates/: page.html
_codeql_build_dir/docenv/: pyvenv.cfg
_codeql_build_dir/lammps-gui_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
_codeql_build_dir/resources/: lammpsgui.qrc.depends
cmake/: Documentation.cmake  Packaging.cmake  Platform.cmake  Sanitizer.cmake  Signing.cmake  Sources.cmake  Testing.cmake
doc/: 404.rst  Doxyfile.in  ai-assistant-design.md  api_reference.rst  architecture.rst  basic_usage.rst  colormaps_preview.py  conf.py.in  dialogs.rst  editor.rst  false_positives.txt  guidelines.rst  index.rst  installation.rst  introduction.rst  lammps_interface.rst  menus.rst  native-chart-backend.md  output.rst  overview.rst  programmers_guide.rst  qt_integration.rst  requirements.txt  shortcuts.rst  testing.rst  visualization.rst
doc/_static/: style.css
doc/source/: basic_usage.rst  index.rst  installation.rst  overview.rst
docs/: genindex.html  index.html  installation.html  objects.inv  overview.html  search.html  searchindex.js  sitemap.xml
docs/_sources/: index.rst.txt  installation.rst.txt
packaging/: LAMMPS_DMG_Background.xcf  MacOSXBundleInfo.plist.in  README.macos  build_linux_tgz.sh  build_macos_dmg.sh  build_windows_cross_nsis.sh  lammps-gui.appdata.xml  lammps-gui.desktop  lammps-gui.manifest.in  lammps-gui.nsis  org.lammps.lammps-gui.yml  sign.sh
paper/: .gitignore  JOSS-SUBMISSION.md  Makefile  joss-10893.preprint.tex  paper.bib  paper.md
plugin/: README  liblammpsplugin.c  liblammpsplugin.h
resources/: command_specs.table  help_index.table  image_style.table  lammps-gui.appdata.xml  lammpsgui.qrc  lmpicons.rc  lmpresources.rc.in  org.lammps.lammps-gui.yml  update-help-index.sh  update-image-styles.sh
resources/icons/lammpsgui/: index.theme
src/: aboutdialog.cpp  aboutdialog.h  analysis.cpp  analysis.h  chartbackend.cpp  chartbackend.h  chartviewer.cpp  chartviewer.h  codeeditor.cpp  codeeditor.h  colormaps.cpp  colormaps.h  constants.h  customfunc.cpp  customfunc.h  downloadprogress.cpp  downloadprogress.h  dumpimage.cpp  dumpimage.h  fileviewer.cpp  fileviewer.h  findandreplace.cpp  findandreplace.h  fitting.cpp  fitting.h  flagwarnings.cpp  flagwarnings.h  helpers.cpp  helpers.h  highlighter.cpp  highlighter.h  imagecache.cpp  imagecache.h  imageviewer.cpp  imageviewer.h  imageviewer_internal.h  imageviewersettings.cpp  inputvariables.cpp  inputvariables.h  lammpsgui.cpp  (+53 more)
test/: CMakeLists.txt  EXAMPLES.md  README.md  requirements.txt  shooter.gnome-screenshooter  shooter.gnome-screenshot  shooter.import  shooter.magick  shooter.xfce4-screenshooter  test_analysis.cpp  test_customfunc.cpp  test_dumpimage.cpp  test_fitting.cpp  test_flagwarnings.cpp  test_gui_edit.py  test_helpers.cpp  test_highlighter.cpp  test_imagecache.cpp  test_inputvariables.cpp  test_lammpssyntax.cpp  test_leastsquares.cpp  test_lepton.cpp  test_levmar.cpp  test_movieimport.cpp  test_plotaxismath.cpp  test_plotdata.cpp  test_shooter.py  test_stdcapture.cpp  test_syntaxcheck.cpp  test_xvfbsize.py
test/coverity/: README.md  coverity_export.py
